kylin-scanner (3.1.0-4) v101; urgency=medium

  * handle  <ukui-log4qt.h> error 

 -- yushuoqi <yushuoqi@kylinos.cn>  Sat, 06 Nov 2021 12:17:29 +0800

kylin-scanner (3.1.0-3) v101; urgency=medium

  * add libukui-log4qt-dev package 

 -- yushuoqi <yushuoqi@kylinos.cn>  Sat, 06 Nov 2021 11:51:47 +0800

kylin-scanner (3.1.0-2) v101; urgency=medium

  * handle build problem by ukui-logrqt  header file

 -- yushuoqi <yushuoqi@kylinos.cn>  Sat, 06 Nov 2021 11:29:32 +0800

kylin-scanner (3.1.0-1) v101; urgency=medium

  * [需求号]: 
  - 扫描新增批量扫描功能 (Closes: #7539)
  - 扫描新版UI重构 (Closes: #7537)
  - 文件扫描重构 (Closes: #7500)

  * [任务号]:
  - 扫描UKUI3.1版本开发 (Closes: #44198)
  - 扫描新版UI重构 (Closes: #45597)
  - 扫描新增批量扫描功能 (Closes: #45598)

  * 其他修改：
  - Handle chinese translations
  - Add build package: libopencv-dev


 -- yushuoqi <yushuoqi@kylinos.cn>  Sat, 06 Nov 2021 10:48:13 +0800

kylin-scanner (3.0.0-1) v101; urgency=medium

  * update for version: 3.0.0-1
  * [任务]: Closes: #44198, #45597, #45598
  - 扫描UKUI3.1版本开发 (Closes: #44198)
  - 扫描新版UI重构 (Closes: #45597)
  - 扫描新增批量扫描功能 (Closes: #45598)


 -- yushuoqi <yushuoqi@kylinos.cn>  Fri, 05 Nov 2021 20:42:54 +0800

kylin-scanner (1.0.0-42) v101; urgency=medium

  * [任务]: Closes: #59233
  - desktop增加藏文名称和简介

  * 其他改动：无

 -- yushuoqi <yushuoqi@kylinos.cn>  Wed, 03 Nov 2021 14:14:38 +0800

kylin-scanner (1.0.0-41) v101; urgency=medium

  * [BUG]: Closes: #85422
  - 【PTOF】打开扫描后切换用户，重新打开扫描时弹出的确认打开弹窗未汉化

 -- yushuoqi <yushuoqi@kylinos.cn>  Fri, 15 Oct 2021 11:39:21 +0800

kylin-scanner (1.0.0-40) v101; urgency=medium

  * [BUG]: Closes: #83620
    - 同一个用户，已打开扫描应用的情况下，再次从开始菜单中打开，会有已被用户使用的提示

 -- yushuoqi <yushuoqi@kylinos.cn>  Wed, 13 Oct 2021 13:52:02 +0800

kylin-scanner (1.0.0-39) v101; urgency=medium

  * [BUG]: Closes: #83938
    - 在没有连接扫描仪下，打开扫描，静置几秒钟后，扫描卡死（Closes: #83938）

 -- yushuoqi <yushuoqi@kylinos.cn>  Tue, 12 Oct 2021 16:23:11 +0800

kylin-scanner (1.0.0-38) v101; urgency=medium

  * [BUG]: Closes: #80696