@@ -1,3 +1,14 @@
+kylin-scanner (3.1.0-5) v101; urgency=medium
+
+  * [BUG]:
+  - #78908, 连接扫描设备FUJITSU fi-7140 ，扫描界面分辨率选项为空
+
+  * 其他：
+  - 切换用户时弹窗中文化
+
+
+ -- yushuoqi <yushuoqi@kylinos.cn>  Tue, 09 Nov 2021 14:34:06 +0800
+
 kylin-scanner (3.1.0-4) v101; urgency=medium
 
   * handle  <ukui-log4qt.h> error 
